--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TransactionActivity"></activity>
+        <activity android:name=".ResultActivity" />
+        <activity android:name=".TransactionActivity" />
         <activity android:name=".BlockActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
